--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
     <!-- End container wrapper -->
     </main>
-    <script src="data/classData.js"></script>
+    <script src="data/projectDataSet.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
