--- a/portfolio.html
+++ b/portfolio.html
@@ -66,11 +66,13 @@
 
         <!--Project Content-->
         <section id="project-content" class="box3">
-            <h2 class="hidden">project content</h2>
-            <h2>project name</h2>
-            <div class="project-img-box">
+            <div class="proj">
+                <h2 class="hidden">project content</h2>
+                <h2 class="proj-name">project name</h2>
+                <div class="proj-img">
+                </div>
+                <p class="proj-descrip"></p>
             </div>
-            <p></p>
         </section>
         <!--End Project Content-->
 
@@ -84,7 +86,7 @@
     </div>
     <!-- End container wrapper -->
     </main>
-    <script src="data/classData.js"></script>
+    <script src="data/projectDataSet.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
