--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <!-- Header -->
         <header>
             <div class="logo">
-                <img src="../images/logo.svg" alt="logo">
+                <a href="index.html"><img src="../images/logo.svg" alt="logo"></a>
             </div>
 
             <!-- Main nav -->
@@ -51,21 +51,21 @@
         
     
         <!--Portfolio Main Content-->
-        <section id="port-Mcontent" class="box1">
+        <section id="port-Mcontent" class="box">
             <h2 class="hidden">portfolio main content</h2>
             <p></p>
         </section>
         <!--End Portfolio Main Content-->
 
         <!--Demo reel Content-->
-        <section id="demo-content" class="box2">
+        <section id="demo-content" class="box">
             <h2 class="hidden">demo reel content</h2>
             <p></p>
         </section>
         <!--End Demo reel Content-->
 
         <!--Project Content-->
-        <section id="project-content" class="box3">
+        <section id="project-content" class="box">
             <div class="proj">
                 <h2 class="hidden">project content</h2>
                 <h2 class="proj-name">project name</h2>
