--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="css/master.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
@@ -19,12 +21,12 @@
         <!-- Header -->
         <header>
             <div class="logo">
-                <a href="index.html"><img src="../images/logo.svg" alt="logo"></a>
+                <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
             </div>
 
             <!-- Main nav -->
             <nav class="mNav">
-                <h2 class="nagivation"></h2>
+                <h2 class="hidden">navigation</h2>
                 <div class="hamburger-menu">
                     <div class="line line-1"></div>
                     <div class="line line-2"></div>
@@ -190,6 +192,6 @@
     <!-- End container wrapper -->
     </main>
     <script src="data/projectDataSet.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
