--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
     <div id="home" class="container-wrapper">
         <!-- Header -->
         <header>
-            <div class="logo">
-                <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
-            </div>
-
             <!-- Main nav -->
-            <nav class="mNav">
+            <nav>
                 <h2 class="hidden">navigation</h2>
+                <div class="logo">
+                    <a href="index.html"><img src="images/logo.svg" alt="logo" width="80px" height="80px"></a>
+                </div>
+
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="portfolio.html" class="nav-link">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">CONTACT</a>
+                    </li>
+                </ul>
+
                 <div class="hamburger-menu">
                     <div class="line line-1"></div>
                     <div class="line line-2"></div>
                     <div class="line line-3"></div>
                 </div>
-
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
-                    </li>
-                </ul>
             </nav>
             <!-- End Main nav -->
         </header>
