--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <div class="contact-info">
                     <div class="contact-sub-line">
                     </div>
-                    <h3><img src="images/icon-phone.svg" alt="phone icon" width="30px" height="30px"> 82) 01 &middot; 4815 &middot; 2466</h3>
+                    <h3><img src="images/icon-phone.svg" alt="phone icon" width="30px" height="30px"><img class="add-icon" src="images/icon-add.svg" alt="add icon" width="10px" height="10px"> 82) 01 &middot; 4815 &middot; 2466</h3>
                     <h3><img src="images/icon-email.svg" alt="email icon" width="28px" height="28px"> jiheeyu95@gmail.com</h3>
                 </div>
             </div>
