--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,9 @@
         <!--Demo reel Content-->
         <section id="demo-content" class="box">
             <h2 class="hidden">demo reel content</h2>
-            <p></p>
+            <div class="video-content">
+                <video class="video" src="videos/demo-reel.mp4" type="video/mp4" controls></video>
+            </div>
         </section>
         <!--End Demo reel Content-->
 
