--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <p>Look around my graphic work,</br>
                         You can check more details</p>
                     <form action="portfolio.html">
-                        <button class="button" type="submit">SEE MORE</button>
+                        <button class="button" type="submit"> MORE</button>
                     </form>
                 </div>
                 
