--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Header -->
         <header>
             <div class="logo">
-                <a href="index.html"><img src="images/logo.svg" alt="logo" width="80px" height="80px"></a>
+                <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
             </div>
 
             <!-- Main nav -->
@@ -87,7 +87,7 @@
                 <div class="graphic button-section">
                     <h3 class="adj">Graphic</h3>
                     <h3>Work</h3>
-                    <p>Look around my graphic work,</br>
+                    <p>Look around my graphic work,<br>
                         You can check more details</p>
                     <form action="portfolio.html">
                         <button class="button" type="submit"> MORE</button>
@@ -118,7 +118,7 @@
                 <!--my-sefie start-->
                 <div class="my-selfie">
                     <!-- <img class="deco-line" src="images/deco_line.png" alt="pointing line"> -->
-                    <img class="selfie-img"src="images/selfie-edge.png" alt="jihee's selfie">
+                    <img class="selfie-img" src="images/selfie-edge.png" alt="jihee's selfie">
                 </div>
                 <!--End my-sefie-->
 
@@ -174,8 +174,8 @@
                 <h3>COPYRIHGT &copy; 2020 JIHEEYU</h3>
             </div>
             <div class="sns">
-                <img class="sns-icon" src="images/instagram.svg" alt="instagram icon"><h3>INSTARGRAM</h3>
-                <img class="sns-icon" src="images/facebook.svg" alt="facebook icon"><h3>FACEBOOK</h3>
+               <img class="sns-icon" src="images/instagram.svg" alt="instagram icon"><h3><a href="#">INSTARGRAM</a></h3>
+               <img class="sns-icon" src="images/facebook.svg" alt="facebook icon"><h3><a href="#">FACEBOOK</a></h3>
             </div>
         </footer>
         <!--End footer-->
