--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <!-- Header -->
         <header>
             <div class="logo">
-                <a href="index.html"><img src="images/logo.svg" alt="logo" width="80px" height="80px"></a>
+                <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
             </div>
 
             <!-- Main nav -->
@@ -62,7 +62,9 @@
                     <h3 class="port-jihees">Jihee's</h3>
                     <h3>Portfolio</h3> 
                 </div>
+            </div>
         </section>
+
         <div class="portIllust">
             <!-- <img src="images/index-main-flower.svg" alt="flower"> -->
             
@@ -78,7 +80,6 @@
                 <h3>CLICK THE BUTTONS !</h3>
                 <buttoncomponent v-for="item in collection" :item="item" :key="item.id" @setvideo="setVideoComponent"></buttoncomponent>
             </div>
-
         </section>
         <!--End Demo reel Content-->
 
